array.island.Island.scala.error
Erreur de compilation :
Island:4: error: value lenght is not a member of Array[Int]
  for (i<-1 to num.lenght-1){
                   ^